<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/detail_background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            tools:context=".view.MovieDetailFragment"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/movieDetailImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:minHeight="200dp"
                android:src="@drawable/lazy_load" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal">

            <TextView
                android:id="@+id/movieDetailIMDB"
                style="@style/movieDetailTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:paddingLeft="20dp"
                android:text="@string/def_imdb" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/star_rate" />


            </LinearLayout>

            <TextView
                android:id="@+id/movieDetailCategory"
                style="@style/movieDetailTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:text="@string/def_category" />

            <TextView
                android:id="@+id/movieDetailTime"
                style="@style/movieDetailTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:text="@string/def_time" />

            <TextView
                android:id="@+id/movieDetailName"
                style="@style/movieDetailTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:text="@string/def_name" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                android:paddingBottom="8dp"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/movieDetailSubject"
                    style="@style/movieDetailSubjectTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/def_subject"
                    android:layout_marginBottom="12dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>
</layout>